ci: checkout hdf5.jl

--- a/.github/workflows/jl.yml
+++ b/.github/workflows/jl.yml
@@ -13,7 +13,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          repository: my-org/my-tools
+          repository: JuliaIO/HDF5.jl
           path: .
       - uses: julia-actions/setup-julia@latest
         with:
