--- a/.github/workflows/jl.yml
+++ b/.github/workflows/jl.yml
@@ -11,14 +11,19 @@ jobs:
     name: develop
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-        with:
-          repository: JuliaIO/HDF5.jl
-          path: .
       - uses: julia-actions/setup-julia@latest
         with:
           version: '1.6'
           arch: 'x64'
+      - uses: actions/checkout@v4
+        with:
+          repository: JuliaIO/HDF5.jl
+          path: .
+      - name: Dowload LocalPreferences
+        run: |
+          curl https://https://raw.githubusercontent.com/hyoklee/HDF5.jl/master/LocalPreferences.toml
+         ls .
+      - uses: julia-actions/julia-buildpkg@latest
       - uses: julia-actions/julia-runtest@latest
         env:
           JULIA_DEBUG: Main
