--- a/.github/workflows/jl.yml
+++ b/.github/workflows/jl.yml
@@ -11,6 +11,20 @@ jobs:
     name: develop
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5
+          path: hdf5
+      - name: Install HDF5
+          run: |
+            cd hdf5
+            ./autogen.sh
+            ./configure --prefix=/tmp
+            make
+            make check
+            make install
+            ls /tmp
+            cd ..
       - uses: julia-actions/setup-julia@latest
         with:
           version: '1.6'
