--- a/.github/workflows/lin-jl.yml
+++ b/.github/workflows/lin-jl.yml
@@ -9,8 +9,8 @@ permissions:
   contents: read
 
 jobs:
-  HDF5.jl:
-    name: HDF5.jl
+  Julia:
+    name: Julia
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
