--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Install vcpkg
         run: |
-          git clone https://raw.githubusercontent.com/microsoft/vcpkg
+          git clone https://github.com/microsoft/vcpkg
           ./vcpkg/bootstrap-vcpkg.sh
           cd vcpkg
           ./vcpkg install hdf5:x64-mingw-dynamic
