--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -9,6 +9,10 @@ jobs:
     name: vcpkg
     runs-on: ubuntu-latest
     steps:
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y install mingw-w64
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg
