--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y install mingw-w64 \
+          sudo apt install -y mingw-w64 \
           libmingw-w64-dev \
           libmingw-w64-sdl2-dev
       - name: Install vcpkg
