--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -3,7 +3,7 @@ name: vcpkg
 on:
   push:
     branches:
-      - main
+      - main-
 jobs:
   vcpkg:
     name: vcpkg
@@ -12,10 +12,11 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt update
-          sudo apt install -y mingw-w64 mingw-w64-tools
+          sudo apt install -y mingw-w64 mingw-w64-tools wine64
       - name: Install vcpkg
         run: |
           git clone https://github.com/microsoft/vcpkg
           ./vcpkg/bootstrap-vcpkg.sh
           cd vcpkg
           ./vcpkg install hdf5[core]:x64-mingw-dynamic
+          curl -O https://gist.githubusercontent.com/peterspackman/8cf73f7f12ba270aa8192d6911972fe8/raw/56ec269dc412a1055d00c4a810e6794283bc7dd4/mingw-w64-x86_64.cmake
