--- a/.github/workflows/vcpkg.yml
+++ b/.github/workflows/vcpkg.yml
@@ -15,7 +15,7 @@ jobs:
           sudo apt install -y mingw-w64 mingw-w64-tools wine64
       - name: Install vcpkg
         run: |
-          git clone https://github.com/oklee/vcpkg
+          git clone https://github.com/hyoklee/vcpkg
           ./vcpkg/bootstrap-vcpkg.sh
           cd vcpkg
           mkdir downloads
