--- a/.github/workflows/mac14-lf.yml
+++ b/.github/workflows/mac14-lf.yml
@@ -13,7 +13,8 @@ jobs:
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
         run: |
-          brew install cmake curl libaec llvm mpich openssl
+          brew upgrade
+          brew install libaec llvm mpich
           brew tap fortran-lang/homebrew-fortran
           brew install lfortran
       - name: Build Ninja
