ci: mac14 conda

--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -1,33 +1,31 @@
-name: mac14 lf sf
+name: mac14 conda
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
-    name: mac14 lf
+    name: mac14 conda
     runs-on: macos-14
     steps:
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-         auto-activate-base: true
-         activate-environment: ""
       - uses: actions/checkout@v4.1.1
       - name: Install Dependencies
         run: |
           brew upgrade
-          brew install libaec llvm mpich
+          brew install libaec llvm
+      - uses: conda-incubator/setup-miniconda@v3
+        with:
+         auto-activate-base: true
+         activate-environment: ""
       - name: Build Ninja
         run: |
           export PATH=/opt/homebrew/opt/llvm/bin:$PATH
           export LDFLAGS="-L/opt/homebrew/opt/llvm/lib"
           export CPPFLAGS="-I/opt/homebrew/opt/llvm/include"
           export CC=$(brew --prefix llvm)/bin/clang
-          brew tap fortran-lang/homebrew-fortran
-          brew install lfortran
-          export FC=/opt/homebrew/bin/lfortran
+          conda install lfortran -c conda-forge
           clang --version
           which lfortran
           lfortran --version
