--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -17,7 +17,7 @@ jobs:
          activate-environment: ""
       - name: Build Ninja
         run: |
-          conda install lfortran -c conda-forge
+          conda install -v lfortran -c conda-forge
           clang --version
           which lfortran
           lfortran --version
