test: bash login mode

--- a/.github/workflows/lin-conda.yml
+++ b/.github/workflows/lin-conda.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     name: lin conda
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        shell: bash -l {0}
+
     steps:
       - uses: actions/checkout@v4.1.1
       - uses: conda-incubator/setup-miniconda@v3
