--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -9,6 +9,10 @@ jobs:
   build:
     name: mac14 conda
     runs-on: macos-14
+    defaults:
+      run:
+        shell: bash -l {0}
+
     steps:
       - uses: actions/checkout@v4.1.1
       - uses: conda-incubator/setup-miniconda@v3
