build: disable leak

--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -48,7 +48,7 @@ jobs:
           -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
           -DHDF5_TEST_VFD:BOOL=ON \
           -DMPIEXEC_MAX_NUMPROCS:STRING=3 \
-          -DUSE_SANITIZER:STRING='Address;Undefined;Leak' \
+          -DUSE_SANITIZER:STRING='Address;Undefined' \
           -DSITE:STRING='mac14' \
           ..
           ctest -T Build --output-on-error -j
