--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -15,6 +15,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4.1.1
+      - name: Install Dependencies
+        run: |
+          brew upgrade
+          brew install openmpi
       - uses: conda-incubator/setup-miniconda@v3
         with:
          auto-activate-base: true
@@ -29,7 +33,7 @@ jobs:
           mkdir build
           cd build
           cmake \
-          -DBUILDNAME:STRING=1f.h.j.mpich.sf.sa.cd \
+          -DBUILDNAME:STRING=1f.h.f.j.ompi.sf.sa.cd \
           -DBUILD_SHARED_LIBS=ON \
           -DCMAKE_BUILD_TYPE=Release \
           -DCMAKE_TOOLCHAIN_FILE=config/toolchain/clang.cmake \
@@ -40,7 +44,7 @@ jobs:
           -DHDF5_BUILD_HL_LIB:BOOL=ON \
           -DHDF5_ENABLE_ALL_WARNINGS=ON \
           -DHDF5_ENABLE_ANALYZER_TOOLS:BOOL=ON \
-          -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+          -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
           -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
           -DHDF5_ENABLE_SANITIZERS:BOOL=ON \
           -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
