--- a/.github/workflows/mac14-conda.yml
+++ b/.github/workflows/mac14-conda.yml
@@ -44,7 +44,7 @@ jobs:
           -DHDF5_BUILD_HL_LIB:BOOL=ON \
           -DHDF5_ENABLE_ALL_WARNINGS=ON \
           -DHDF5_ENABLE_ANALYZER_TOOLS:BOOL=ON \
-          -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
+          -DHDF5_ENABLE_PARALLEL:BOOL=ON \
           -DHDF5_ENABLE_THREADSAFE:BOOL=OFF \
           -DHDF5_ENABLE_SANITIZERS:BOOL=ON \
           -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
