--- a/.github/workflows/nvhpc-24.3.yml
+++ b/.github/workflows/nvhpc-24.3.yml
@@ -37,6 +37,10 @@ jobs:
           cd hdf5
           mkdir build
           cd build
-          cmake -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
+          cmake \
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_PARALLEL:BOOL=ON \
+            -DHDF5_BUILD_FORTRAN:BOOL=ON \
+            ..
           ctest -T Build
           ctest -T Test
