--- a/.github/workflows/nvhpc-24.3.yml
+++ b/.github/workflows/nvhpc-24.3.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Install System dependencies
         run: |
           sudo apt update
-          sudo apt install -y cmake libzip-dev
+          sudo apt install -y cmake libzip-dev ninja-build
       - name: Install NVHPC
         run: |
           curl https://developer.download.nvidia.com/hpc-sdk/ubuntu/DEB-GPG-KEY-NVIDIA-HPC-SDK | sudo gpg --dearmor -o /usr/share/keyrings/nvidia-hpcsdk-archive-keyring.gpg
