--- a/.github/workflows/nvhpc-24.3.yml
+++ b/.github/workflows/nvhpc-24.3.yml
@@ -37,6 +37,7 @@ jobs:
           mkdir build
           cd build
           cmake \
+            -C ../config/cmake/cacheinit.cmake \
             -G Ninja \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
