--- a/.github/workflows/nvhpc-24.3.yml
+++ b/.github/workflows/nvhpc-24.3.yml
@@ -39,9 +39,10 @@ jobs:
           cmake \
             -C ../config/cmake/cacheinit.cmake \
             -G Ninja \
+            -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
+            -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=ON \
-            -DHDF5_BUILD_FORTRAN:BOOL=ON \
             ..
           ctest -T Build
           ctest -T Test
