--- a/.github/workflows/arm64.yml
+++ b/.github/workflows/arm64.yml
@@ -2,7 +2,7 @@ name: arm64
 
 on:
   push:
-    branches: main-
+    branches: main
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -21,16 +21,16 @@ jobs:
         uses: actions/checkout@v4
 
       - name: ${{ matrix.os.name }}
-        uses: cross-platform-actions/action@v0.21.0
+        uses: cross-platform-actions/action@v0.23.0
         env:
           FOO: A
-          BAR: B        
+          BAR: B
         with:
-          environment_variables: FOO BAR        
+          environment_variables: FOO BAR
           operating_system: ${{ matrix.os.name }}
           architecture: ${{ matrix.os.architecture }}
           version: '${{ matrix.os.version }}'
-          shell: bash          
+          shell: bash
           run: |
             sudo pkg_add git
             git clone https://github.com/HDFGroup/hdf5
@@ -42,4 +42,3 @@ jobs:
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF ..
             ctest -T Build --output-on-error -j
             ctest -T Test --output-on-error -j
-
