--- a/.github/workflows/nvhpc-24.3-f-p.yml
+++ b/.github/workflows/nvhpc-24.3-f-p.yml
@@ -1,4 +1,4 @@
-name: nvhpc 24.3
+name: nvhpc 24.3 f p
 
 on:
   push:
@@ -25,8 +25,12 @@ jobs:
           NPROCS: 2
         run: |
           export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpicc
+          export FC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpifort
           export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/cuda/12.3/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/lib
           export NVHPCSDK=/opt/nvidia/hpc_sdk
+          export OMPI_CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin/nvc
+          export OMPI_CXX=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin/nvc++
+          export OMPI_FC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin/nvfortran
           export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin:$PATH
 /mpifort
 
@@ -39,9 +43,9 @@ jobs:
             -G Ninja \
             -DCMAKE_BUILD_TYPE=Release \
             -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
-            -DHDF5_BUILD_FORTRAN:BOOL=OFF \
+            -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DHDF5_BUILD_JAVA:BOOL=OFF \
-            -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
+            -DHDF5_ENABLE_PARALLEL:BOOL=ON \
             -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             ..
           ctest -T Build
