--- a/.github/workflows/nvhpc-24.3-f.yml
+++ b/.github/workflows/nvhpc-24.3-f.yml
@@ -1,4 +1,4 @@
-name: nvhpc 24.3
+name: nvhpc 24.3 f
 
 on:
   push:
@@ -25,6 +25,7 @@ jobs:
           NPROCS: 2
         run: |
           export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpicc
+          export FC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpifort
           export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/cuda/12.3/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/lib
           export NVHPCSDK=/opt/nvidia/hpc_sdk
           export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin:$PATH
@@ -39,10 +40,10 @@ jobs:
             -G Ninja \
             -DCMAKE_BUILD_TYPE=Release \
             -DHDF5_BUILD_CPP_LIB:BOOL=OFF \
-            -DHDF5_BUILD_FORTRAN:BOOL=OFF \
+            -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DHDF5_BUILD_JAVA:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
-            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
             ..
           ctest -T Build
           ctest -T Test
