--- a/.github/workflows/nvhpc-24.3-f.yml
+++ b/.github/workflows/nvhpc-24.3-f.yml
@@ -41,7 +41,7 @@ jobs:
             -DHDF5_BUILD_FORTRAN:BOOL=ON \
             -DHDF5_BUILD_JAVA:BOOL=OFF \
             -DHDF5_ENABLE_PARALLEL:BOOL=OFF \
-            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF
+            -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
             ..
           ctest -T Build
           ctest -T Test
