ci: test freebsd

--- a/.github/workflows/nvhpc-24.3-f.yml
+++ b/.github/workflows/nvhpc-24.3-f.yml
@@ -24,8 +24,8 @@ jobs:
         env:
           NPROCS: 2
         run: |
-          export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpicc
-          export FC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin/mpifort
+          export CC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin/nvc
+          export FC=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin/nvfortran	  
           export LD_LIBRARY_PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/cuda/12.3/lib64:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/lib
           export NVHPCSDK=/opt/nvidia/hpc_sdk
           export PATH=/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/comm_libs/openmpi4/bin:/opt/nvidia/hpc_sdk/Linux_x86_64/24.3/compilers/bin:$PATH
