--- a/.github/workflows/freebsd.yml
+++ b/.github/workflows/freebsd.yml
@@ -2,7 +2,7 @@ name: fbsd
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
@@ -31,9 +31,8 @@ jobs:
           run: |
             sudo pkg install -y git
             sudo pkg install -y cmake
-            sudo pkg install -y jpeg-turbo
-            git clone https://github.com/HDFGroup/hdf4
-            cd hdf4
+            git clone https://github.com/HDFGroup/hdf5
+            cd hdf5
             mkdir build
             cd build
             cmake \
