--- a/.github/workflows/n.yml
+++ b/.github/workflows/n.yml
@@ -29,7 +29,9 @@ jobs:
 
       - name: Configure CMake
         working-directory: build
-        run: cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/toolchain/gcc.cmake -DANDROID_ABI=armeabi-v7a ..
+        run: |
+          find /usr/local/lib/android/
+          cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/toolchain/gcc.cmake -DANDROID_ABI=armeabi-v7a ..
 
       - name: Build with Make
         working-directory: build
