ci: set toolchain

--- a/.github/workflows/n.yml
+++ b/.github/workflows/n.yml
@@ -31,7 +31,7 @@ jobs:
         working-directory: build
         run: |
           find /usr/local/lib/android/
-          cmake -DCMAKE_TOOLCHAIN_FILE=$ANDROID_NDK_HOME/build/toolchain/gcc.cmake -DANDROID_ABI=armeabi-v7a ..
+          cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/lib/android/sdk/ndk/26.2.11394342/build/cmake/android.toolchain.cmakee -DANDROID_ABI=arm64i-v8a ..
 
       - name: Build with Make
         working-directory: build
