--- a/.github/workflows/n.yml
+++ b/.github/workflows/n.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Configure CMake
         working-directory: build
         run: |
-          cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/lib/android/sdk/ndk/26.2.11394342/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64i-v8a ..
+          cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/lib/android/sdk/ndk/26.2.11394342/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a ..
 
       - name: Build with Make
         working-directory: build
