--- a/.github/workflows/n.yml
+++ b/.github/workflows/n.yml
@@ -30,8 +30,14 @@ jobs:
       - name: Configure CMake
         working-directory: build
         run: |
-          cmake -DCMAKE_TOOLCHAIN_FILE=/usr/local/lib/android/sdk/ndk/26.2.11394342/build/cmake/android.toolchain.cmake -DANDROID_ABI=arm64-v8a ..
+          cmake \
+          -DCMAKE_TOOLCHAIN_FILE=/usr/local/lib/android/sdk/ndk/26.2.11394342/build/cmake/android.toolchain.cmake \
+          -DANDROID_ABI=arm64-v8a \
+          -DBUILDNAME:STRING=ndk26.2 \
+          -DCTEST_DROP_SITE_INIT:STRING="my.cdash.org" \
+          -DSITE:STRING=arm64-v8a \
+          ..
 
       - name: Build with Make
         working-directory: build
-        run: make
+        run: ctest -D Experimental
