--- a/.github/workflows/arm64-freebsd.yml
+++ b/.github/workflows/arm64-freebsd.yml
@@ -2,7 +2,7 @@ name: arm64 fbsd
 
 on:
   push:
-    branches: [ main ]
+    branches: [ main- ]
 
 jobs:
   test: # make sure the action works on a clean machine without building
