--- a/.github/workflows/lin-conda-fl.yml
+++ b/.github/workflows/lin-conda-fl.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        shell: bash -l {0}
+        shell: bash -leo pipefail {0}
 
     steps:
       - uses: actions/checkout@v4.1.1
