--- a/.github/workflows/sol-auto.yml
+++ b/.github/workflows/sol-auto.yml
@@ -1,8 +1,8 @@
-name: sol
+name: sol auto
 
 on:
   push:
-    branches: main-
+    branches: main
 
 
 defaults:
@@ -13,11 +13,11 @@ jobs:
     name: solaris-gcc
     runs-on: ubuntu-latest
     steps:
-      # - name: Checkout repository
-      #   uses: actions/checkout@v4
-      #   with:
-      #     repository: HDFGroup/hdf5
-      #     path: .
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          repository: HDFGroup/hdf5
+          path: hdf5
 
       - name: Test with gcc
         uses: vmactions/solaris-vm@v1
@@ -27,9 +27,11 @@ jobs:
           copyback: false
           prepare: |
             set -e
-            pkg install cmake gcc
+            pkg install autoconf automake libtool
           run: |
             set -e
-            mkdir build
-            cmake -S . -Bbuild -DCMAKE_BUILD_TYPE=Release
-            cmake --build build -- -j
+            cd hdf5	    
+            ./autogen.sh
+            ./configure
+            make
+            make check
