--- a/.github/workflows/n.yml
+++ b/.github/workflows/n.yml
@@ -8,6 +8,8 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout Dockcross
+      
       - name: Install CMake
         run: |
           sudo apt-get update
