--- a/.github/workflows/msys2-auto-h5.yml
+++ b/.github/workflows/msys2-auto-h5.yml
@@ -1,8 +1,8 @@
-name: msys2 auto
+name: msys2 auto h5
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 permissions:
   contents: read
