ci: mac14 flang

--- a/.github/workflows/mac-cmake-flang-mpich2.yml
+++ b/.github/workflows/mac-cmake-flang-mpich2.yml
@@ -1,9 +1,9 @@
-name: mac-13 CMake clang17 debug flang java mpich sf
+name: mac14 flang
 
 on:
   workflow_dispatch:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   build:
@@ -31,11 +31,10 @@ jobs:
 
     steps:
     - name: Install Dependencies (macOS)
-      run: brew install llvm mpich ninja
+      run: brew install ninja
     - name: Install flang
       run : |
-        git clone --single-branch --branch llvmorg-17.0.1 \
-          https://github.com/llvm/llvm-project.git
+        git clone --quiet https://github.com/llvm/llvm-project.git
         mkdir build
         mkdir install
         ROOTDIR=`pwd`
@@ -44,13 +43,9 @@ jobs:
         cd build
         cmake \
           -G Ninja \
-          -DCMAKE_BUILD_TYPE=Debug \
           -DCMAKE_INSTALL_PREFIX=$INSTALLDIR \
-          -DCMAKE_CXX_STANDARD=17 \
           -DCMAKE_EXPORT_COMPILE_COMMANDS=ON \
           -DCMAKE_CXX_LINK_FLAGS="-Wl,-rpath,$LD_LIBRARY_PATH" \
-          -DFLANG_ENABLE_WERROR=ON \
-          -DLLVM_ENABLE_ASSERTIONS=ON \
           -DLLVM_TARGETS_TO_BUILD=host \
           -DLLVM_LIT_ARGS=-v \
           -DLLVM_ENABLE_PROJECTS="clang;flang" \
@@ -59,55 +54,3 @@ jobs:
         ninja
         ninja install
 
-    - name: Get Sources
-      uses: actions/checkout@v4
-      with:
-        repository: HDFGroup/hdf5
-        path: hdf5
-
-    - name: Configure
-      shell: bash
-      run: |
-        cd hdf5
-        export PATH="/Users/runner/work/actions/actions/install/bin:$PATH"
-        export LDFLAGS="-L/Users/runner/work/actions/actions/install/lib"
-        export CPPFLAGS="-I/Users/runner/work/actions/actions/install/include"
-        export CFLAGS="-I/Users/runner/work/actions/actions/install/include"
-        export FCFLAGS="-flang-experimental-exec"
-        find .
-        find ..
-        export FC="$(which flang-new)"
-        export CC="$(which clang)"
-        echo $CC
-        echo $FC
-        mkdir build
-        cd  build
-        cmake ${{ matrix.generator }} \
-        -DCMAKE_BUILD_TYPE=${{ matrix.build_type }} \
-        -DCMAKE_TOOLCHAIN_FILE=${{ matrix.toolchain }} \
-        -DBUILD_SHARED_LIBS=ON \
-        -DHDF5_BUILD_CPP_LIB:BOOL=${{ matrix.cpp }} \
-        -DHDF5_BUILD_HL_LIB:BOOL=${{ matrix.hl }} \
-        -DHDF5_BUILD_FORTRAN=${{ matrix.fortran }} \
-        -DHDF5_BUILD_JAVA=${{ matrix.java }} \
-        -DHDF5_ENABLE_ALL_WARNINGS=ON \
-        -DHDF5_ENABLE_THREADSAFE:BOOL=${{ matrix.ts }} \
-        -DHDF5_ENABLE_PARALLEL:BOOL=${{ matrix.parallel }} \
-        -DHDF5_ENABLE_SUBFILING_VFD:BOOL=ON \
-        -DHDF5_ENABLE_SZIP_SUPPORT:BOOL=OFF \
-        -DMPIEXEC_MAX_NUMPROCS:STRING=2 \
-        ..
-
-    - name: Build
-      run: cmake --build . --config ${{ matrix.build_type }}
-      working-directory: ${{ runner.workspace }}/hdf5/build
-
-    - name: Test
-      run: ctest --build . -C ${{ matrix.build_type }} -V
-      working-directory: ${{ runner.workspace }}/hdf5/build
-
-    - name: Upload
-      uses: actions/upload-artifact@v2
-      with:
-        name: my-artifact
-        path: ${{ runner.workspace }}/build/CMakeCache.txt
