--- a/.github/workflows/s390x_auto.yml
+++ b/.github/workflows/s390x_auto.yml
@@ -2,13 +2,13 @@ name: s390x auto
 
 on:
   push:
-    branches: [ main- ]
+    branches: [ main ]
 
 jobs:
   aarch64_job:
     # The host should always be Linux
     runs-on: ubuntu-latest
-    name: Build on ubuntu-latest aarch64
+    name: s390x auto
     steps:
       - uses: uraimo/run-on-arch-action@v2
         name: Run commands
@@ -22,12 +22,12 @@ jobs:
           githubToken: ${{ github.token }}
           install: |
             apt-get update -q -y
-            apt-get install -q -y git cmake libjpeg-dev zlib1g zlib1g-dev
-            apt-get install -q -y gfortran g++  yacc flex libtool autotools-dev
+            apt-get install -q -y git zlib1g zlib1g-dev
+            apt-get install -q -y gfortran g++  libtool autotools-dev
           run: |
             echo ::set-output name=uname::$(uname -a)
-            git clone https://github.com/HDFGroup/hdf4
-            cd hdf4
+            git clone https://github.com/HDFGroup/hdf5
+            cd hdf5
             ./autogen.sh
             ./configure
              make
