--- a/.github/workflows/s390x_auto.yml
+++ b/.github/workflows/s390x_auto.yml
@@ -22,7 +22,7 @@ jobs:
           githubToken: ${{ github.token }}
           install: |
             apt-get update -q -y
-            apt-get install -q -y git zlib1g zlib1g-dev
+            apt-get install -q -y cmake git zlib1g zlib1g-dev
             apt-get install -q -y gfortran g++  libtool autotools-dev
           run: |
             echo ::set-output name=uname::$(uname -a)
